--- a/src/styles/trainers/areas.css
+++ b/src/styles/trainers/areas.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
